fix spacing in navigation

--- a/src/components/TableView/EntitiesList.css
+++ b/src/components/TableView/EntitiesList.css
@@ -28,41 +28,3 @@
   border-color: #2db7f5;
   color: #2db7f5;
 }
-
-.entities-page__table {
-  border: 2px solid #FFFFFF;
-  width: 100%;
-  text-align: center;
-  border-collapse: collapse;
-}
-
-.entities-page__table td,
-.entities-page__table th {
-  border: 1px solid #FFFFFF;
-  padding: 3px 4px;
-}
-
-.entities-page__table tbody td {
-  font-size: 13px;
-}
-
-.entities-page__table td:nth-child(even) {
-  background: #EBEBEB;
-}
-
-.entities-page__table thead {
-  background: #FFFFFF;
-  border-bottom: 4px solid #333333;
-}
-
-.entities-page__table thead th {
-  font-size: 15px;
-  font-weight: bold;
-  color: #333333;
-  text-align: center;
-  border-left: 2px solid #333333;
-}
-
-.entities-page__table thead th:first-child {
-  border-left: none;
-}
